--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0"
   },
